# TextAnalytics

./: .gitignore  .gitkeep  G43_Task4_April_11th_FINAL.ipynb  G43_Task4_FINAL (2).ipynb  G43_Task4_FINAL_updated.ipynb  README.md  Untitled1.ipynb  Workflow.drawio  pyproject.toml  requirements.txt
models/: textblob_config.json
models/topic_modelling/: bert_test_topics.pkl  bert_train_topics.pkl  bow_vectorizer.pkl  eval_results_bow.pkl  eval_results_tfidf.pkl  lda_best_bow.pkl  lda_best_bow_dict.pkl  lda_best_tfidf.pkl  lda_best_tfidf_dict.pkl  model_registry.pkl  tfidf_vectorizer.pkl
notebooks/01_eda/: EDA-Fahmi.ipynb  EDA-ThiruvelAP.ipynb  EDA-Ukhash.ipynb  EDA-Xiang.ipynb  EDA-Zhaoqi.ipynb  EDA_Zhaoqi.ipynb
notebooks/02_clustering/: ClusterningAnalysis.ipynb  LSA_PCA_UMAP.ipynb
notebooks/03_text_representation/: LDA_Zhaoqi.ipynb  Text-Preprocessing.ipynb
notebooks/04_pipeline/: EmbeddingsVisualization.ipynb  SentimentAnalysis.ipynb  Text-Preprocessing.ipynb  TopicModelling.ipynb
notebooks/05_evaluation/: Evaluation.ipynb
reports/: Group_Report.md
src/clustering/: Hac.py  KMeans.py
src/configfiles/: config.py
src/evaluation/: ClusterEvaluation.py  Cluster_Interpretability.py  Cluster_Stability.py  TopicModel_Testing.py  TopicModel_Visualization.py  visualization.py
src/features/: Embeddings.py  TopicModelling.py
src/pipeline/: Preprocessing.py
src/utils/: Utils.py  add_figure_saving.py
