[tool.poetry]
name = "task4-customer-feedback"
version = "0.1.0"
description = "EMATM0067 - Task 4: Mining Insights from Customer Feedback"
authors = ["Your Team Name"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4"         

nltk = "^3.8"                  # tokenisation, stopwords, lemmatisation
spacy = "^3.7"                 # advanced NLP pipeline (optional alternative)
sentence-transformers = "^2.7" # sentence embeddings (SBERT etc.)
transformers = "^4.40"         # HuggingFace models
gensim = "^4.3"                # LDA topic modelling

torch = {version = "^2.3", source = "pytorch"}
tensorflow = "^2.16"

matplotlib = "^3.8"
seaborn = "^0.13"
plotly = "^5.22"               

jupyter = "^1.0"
ipykernel = "^6.29"
ipywidgets = "^8.1"            

tqdm = "^4.66"                 
python-dotenv = "^1.0"         
datasets = "^2.19"             


[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"           


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"